--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   flutter:
     sdk: flutter
+  fluttertoast: ^8.0.9
   google_fonts: ^2.3.2
   just_audio: ^0.9.21
   marquee: ^2.2.1
