--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   assets_audio_player: ^3.0.4+3
+  audio_video_progress_bar: ^0.10.0
   audioplayers: ^0.20.1
   cupertino_icons: ^1.0.4
   flutter:
