--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.5.3+2
   fluttertoast: ^8.0.9
   google_fonts: ^2.3.2
   just_audio: ^0.9.21
